# www

./: .gitignore  .lvimrc  .markdownlint.yaml  .pre-commit-config.yaml  Makefile  README.md  acrl.yml  justfile  mkdocs.yml  pyproject.toml  send.php  simkube.yml
.github/workflows/: publish.yml  publish_next.yml  verify.yml
acrl/: about.md  contact.md  index.md  media.md  pricing.md  research.md  saas.md  send.php  services.md  style.css
acrl/img/: hero1.png~  hero2.png~
acrl/posts/: 2023-07-24-whale-hello-there.md  2023-07-31-writing-k8s-scheduler-rust.md  2023-08-07-doing-kubernetes-configuration-good.md  2023-08-21-conways-law-kubernetes.md  2023-08-28-simkube-part-1.md  2023-09-04-simkube-part-2.md  2023-09-18-simkube-part-3.md  2023-11-20-kubecon-recap-part-2.md  2023-12-04-kubecon-recap-part-3.md  2023-12-11-kubecon-recap-part-4.md  2023-12-18-acrl-wrapped.md  2024-01-22-happy-new-year.md  2024-01-29-revisiting-fireconfig.md  2024-02-05-okrs-are-bullshit.md  2024-02-12-bad-analogy-time.md  2024-02-26-simkube-part-4.md  2024-03-11-design-docs.md  (+54 more)
docs/: contact.md  index.md
hooks/: changelog.py  empty_cells.py  header_meta.py  jinja_regex.py  post_list.py  prebuild_css.py  preprocess.py
include/: glossary.md
root/: contact.md  docs.md  index.md  posts.md  send.php
simkube/: about.md  community.md  documentation.md  faq.md  index.md  mascot.md  style.css
templates/: blog-post.md
theme/: base.html  docs.html  docs_root.html  form.html  main.html  nav-sub.html  post.html  post_header.html  posts.html  posts_base.html  posts_root.html  ref.html  search.html  simkube.html  style.css
(+41 files in other folders)
