[tool.poetry]
name = "www"
version = "0.1.0"
description = ""
authors = ["David Morrison <drmorr@appliedcomputing.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5.3"
mkdocs-multirepo-plugin = "^0.6.3"
pygments = "^2.16.1"
mkdocs-rss-plugin = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
