[tool.poetry]
name = "www"
version = "0.1.0"
description = ""
authors = ["David Morrison <drmorr@appliedcomputing.io>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5.3"
mkdocs-multirepo-plugin = "^0.6.3"
pygments = "^2.16.1"
mkdocs-rss-plugin = "^1.8.0"
mkdocs-mermaid2-plugin = "^1.1.1"
pymdown-extensions = "^10.7"
markdown-exec = {extras = ["ansi"], version = "^1.9.3"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
