[project]
name = "www"
version = "0.1.0"
description = ""
authors = [{name = "David Morrison", email = "drmorr@appliedcomputing.io" }]
readme = "README.md"
requires-python = ">=3.11,<4"

dependencies = [
  "markdown-exec[ansi]",
  "mkdocs",
  "mkdocs-multirepo-plugin",
  "mkdocs-rss-plugin",
  "mkdocs-mermaid2-plugin",
  "neoteroi-mkdocs @ git+https://github.com/drmorr0/neoteroi-mkdocs-plugins",
  "pygments",
  "pymdown-extensions",
  "python-markdown-math",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
